After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655659 - segfault in properties dialog
segfault in properties dialog
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: properties
3.1.x
Other Linux
: Normal major
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2011-07-30 22:08 UTC by Olivier Blin
Modified: 2011-08-01 10:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
properties: Fix segfault when uuids is NULL (895 bytes, patch)
2011-07-30 22:08 UTC, Olivier Blin
committed Details | Review

Description Olivier Blin 2011-07-30 22:08:38 UTC
Created attachment 192926 [details] [review]
properties: Fix segfault when uuids is NULL

When selecting a device in the properties dialog, it segfaults.
Attached patch fixes it.
Comment 1 Bastien Nocera 2011-08-01 10:03:32 UTC
Attachment 192926 [details] pushed as 19b980b - properties: Fix segfault when uuids is NULL