properties: Fix segfault when uuids is NULL

https://bugzilla.gnome.org/show_bug.cgi?id=655659